--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@quasar/extras": "^1.16.12",
     "axios": "^1.7.7",
     "pinia": "^2.2.2",
@@ -19,7 +21,7 @@
   "devDependencies": {
     "@quasar/vite-plugin": "^1.7.0",
     "@vitejs/plugin-vue": "^5.1.2",
-    "sass": "^1.33.0",
+    "sass": "^1.79.4",
     "vite": "^5.4.1"
   }
 }
