--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-project",
+  "name": "frontendetapasproductivas",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,11 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@quasar/extras": "^1.16.12",
-    "axios": "^1.7.7",
-    "pinia": "^2.2.2",
+    "pinia": "^2.2.4",
+    "pinia-plugin-persistedstate": "^4.0.2",
     "quasar": "^2.17.0",
     "vue": "^3.4.37",
     "vue-router": "^4.4.5"
@@ -21,7 +19,7 @@
   "devDependencies": {
     "@quasar/vite-plugin": "^1.7.0",
     "@vitejs/plugin-vue": "^5.1.2",
-    "sass": "^1.79.4",
+    "sass": "^1.33.0",
     "vite": "^5.4.1"
   }
 }
