--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@quasar/extras": "^1.16.12",
+    "axios": "^1.7.7",
     "pinia": "^2.2.4",
     "pinia-plugin-persistedstate": "^4.0.2",
     "quasar": "^2.17.0",
